<resources>
    <string name="app_name">DiamondAgent</string>
    <string name="diamond_agent_center_title">钻石代理商</string>
    <string name="diamond_agent_center_right">说明</string>
    <string name="diamond_agent_center_num">我的编号：%1$s</string>
    <string name="diamond_agent_center_superior">我的上级：%1$s</string>
    <string name="diamond_agent_center_superior_null">无</string>
    <string name="diamond_agent_center_zero">0</string>
    <string name="diamond_agent_center_amount">%1$s 元</string>
    <string name="diamond_agent_center_person">%1$s 人</string>
    <string name="diamond_agent_center_today_title">今日返利</string>
    <string name="diamond_agent_center_this_month_title">本月返利</string>
    <string name="diamond_agent_center_all_title">全部返利</string>
    <string name="diamond_agent_center_surplus_days_title">无限开单特权与钻石代理商剩余天数：%1$s天</string>
    <string name="diamond_agent_center_qr_code_title">我的二维码与邀请码</string>
    <string name="diamond_agent_center_member_list_title">成员列表</string>
    <string name="diamond_agent_center_balance_title">余额：%1$s</string>
    <string name="diamond_agent_center_balance_take">提现</string>
    <string name="diamond_agent_center_renew_logo_title">续费 钻石代理商及一年无限开单特权 %1$s元</string>
    <string name="diamond_agent_center_payment_method_title">支付方式</string>
    <string name="diamond_agent_center_pay_button">购买</string>
    <string name="diamond_agent_center_pay_button_explain">购买代理商的资格费用不可退款和提现，仅支持推广返利提现</string>
    <string name="diamond_agent_center_no_pay_type_toast">请选择支付方式</string>
    <string name="diamond_agent_invitation_code_title">注意事项：</string>
    <string name="diamond_agent_invitation_code_title_first">如果被邀请的客户未下载过蜜蜂出行APP请扫描此二维码</string>
    <string name="diamond_agent_invitation_code_title_second">如果被邀请的客户是蜜蜂出行的老用户请发送邀请码，并让被邀请客户输入邀请码</string>
    <string name="diamond_agent_invitation_code">邀请码：%1$s</string>
    <string name="diamond_agent_consumer_title_one">一级消费者成员</string>
    <string name="diamond_agent_consumer_title_two">二级消费者成员</string>
    <string name="diamond_agent_consumer_title_three">三级消费者成员</string>
    <string name="diamond_agent_consumer_already_use">已消费</string>
    <string name="diamond_agent_consumer_extract">提成</string>
    <string name="diamond_agent_consumer_in_total">总共</string>
    <string name="diamond_agent_consumer_title">代理商分销</string>
    <string name="diamond_agent_consumer_statistics">统计</string>
    <string name="diamond_agent_consumer_first_consumer">一级消费者：%1$s人</string>
    <string name="diamond_agent_consumer_second_consumer">二级消费者：%1$s人</string>
    <string name="diamond_agent_consumer_three_consumer">三级消费者：%1$s人</string>
    <string name="diamond_agent_consumer_all_member">全部成员：%1$s人</string>
    <string name="diamond_agent_consumer_total">总计</string>
    <string name="diamond_agent_center_referee_title">推荐人</string>
    <string name="diamond_agent_center_referee_submit_button">提交</string>
    <string name="diamond_agent_center_referee_edit_hit">（请在此填写推荐人的邀请码）</string>


    <array name="member_tab_title">
        <item>全部</item>
        <item>本月</item>
        <item>今日</item>
    </array>

</resources>
