<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/consumer_in_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:paddingBottom="@dimen/dp3"
            android:paddingTop="@dimen/dp3"
            android:text="@string/diamond_agent_consumer_in_total" />

        <TextView
            android:id="@+id/consumer_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:paddingBottom="@dimen/dp3"
            android:paddingTop="@dimen/dp3"
            android:text="@string/diamond_agent_consumer_title_one" />

        <View
            android:layout_width="@dimen/dp1"
            android:layout_height="match_parent"
            android:background="@color/selected_list_divider" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:paddingBottom="@dimen/dp3"
            android:paddingTop="@dimen/dp3"
            android:text="@string/diamond_agent_consumer_already_use" />

        <View
            android:layout_width="@dimen/dp1"
            android:layout_height="match_parent"
            android:background="@color/selected_list_divider" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:paddingBottom="@dimen/dp3"
            android:paddingTop="@dimen/dp3"
            android:text="@string/diamond_agent_consumer_extract" />

        <View
            android:layout_width="@dimen/dp1"
            android:layout_height="match_parent"
            android:background="@color/selected_list_divider" />
    </LinearLayout>
</LinearLayout>
