<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/center_title_bg"
    android:paddingBottom="@dimen/dp10"
    android:paddingLeft="@dimen/dp12"
    android:paddingRight="@dimen/dp12"
    android:paddingTop="@dimen/dp10">

    <ImageView
        android:id="@+id/center_logo"
        android:layout_width="@dimen/dp45"
        android:layout_height="@dimen/dp45"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="@drawable/center_logo" />

    <LinearLayout
        android:id="@+id/center_title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp12"
        android:layout_toRightOf="@+id/center_logo"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/center_num"
            style="@style/center_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1" />

        <TextView
            android:id="@+id/center_superior"
            style="@style/center_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/center_yuan_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/center_title_view"
        android:layout_marginLeft="@dimen/dp12"
        android:layout_marginTop="@dimen/dp5"
        android:layout_toRightOf="@+id/center_logo"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/center_today_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingRight="@dimen/dp20">

            <TextView
                style="@style/center_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diamond_agent_center_today_title" />

            <TextView
                android:id="@+id/center_today_yuan"
                style="@style/center_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/center_this_month_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp20"
            android:paddingRight="@dimen/dp20">

            <TextView
                style="@style/center_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diamond_agent_center_this_month_title" />

            <TextView
                android:id="@+id/center_this_month_yuan"
                style="@style/center_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/center_all_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp20">

            <TextView
                style="@style/center_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diamond_agent_center_all_title" />

            <TextView
                android:id="@+id/center_all_yuan"
                style="@style/center_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/center_surplus_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/center_yuan_view"
        android:layout_marginLeft="@dimen/dp12"
        android:layout_marginTop="@dimen/dp5"
        android:layout_toRightOf="@+id/center_logo"
        android:textColor="@color/center_surplus_days"
        android:textSize="@dimen/sp12" />
</RelativeLayout>

