<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dp10"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/selected_list_divider" />

    <RelativeLayout
        android:id="@+id/qr_code_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        android:paddingLeft="@dimen/dp12"
        android:paddingRight="@dimen/dp12">

        <ImageView
            android:id="@+id/qr_code_logo"
            android:layout_width="@dimen/dp30"
            android:layout_height="@dimen/dp30"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/center_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp5"
            android:layout_toRightOf="@+id/qr_code_logo"
            android:text="@string/diamond_agent_center_qr_code_title"
            android:textColor="@color/black"
            android:textSize="@dimen/sp14"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/arrow_right" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/selected_list_divider" />

    <RelativeLayout
        android:id="@+id/member_list_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        android:paddingLeft="@dimen/dp12"
        android:paddingRight="@dimen/dp12">

        <ImageView
            android:id="@+id/member_list_logo"
            android:layout_width="@dimen/dp30"
            android:layout_height="@dimen/dp30"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/center_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp5"
            android:layout_toRightOf="@+id/member_list_logo"
            android:text="@string/diamond_agent_center_member_list_title"
            android:textColor="@color/black"
            android:textSize="@dimen/sp14"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/arrow_right" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/selected_list_divider" />

    <RelativeLayout
        android:id="@+id/balance_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        android:paddingLeft="@dimen/dp12"
        android:paddingRight="@dimen/dp12">

        <ImageView
            android:id="@+id/balance_logo"
            android:layout_width="@dimen/dp30"
            android:layout_height="@dimen/dp30"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/center_logo" />

        <TextView
            android:id="@+id/balance_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp5"
            android:layout_toRightOf="@+id/balance_logo"
            android:textSize="@dimen/sp14" />

        <TextView
            android:id="@+id/balance_take"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp5"
            android:background="@drawable/center_balance_text_bg"
            android:text="@string/diamond_agent_center_balance_take"
            android:textColor="@color/center_balance_text_color"
            android:textSize="@dimen/sp14" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/selected_list_divider" />

    <RelativeLayout
        android:id="@+id/renew_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        android:paddingLeft="@dimen/dp12"
        android:paddingRight="@dimen/dp12">

        <ImageView
            android:id="@+id/renew_logo"
            android:layout_width="@dimen/dp30"
            android:layout_height="@dimen/dp30"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/center_logo" />

        <TextView
            android:id="@+id/renew_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp5"
            android:layout_toRightOf="@+id/renew_logo"
            android:textSize="@dimen/sp14"
            android:textStyle="bold" />


    </RelativeLayout>

</LinearLayout>